--- a/src/_sass/imports/minimal-mistakes.scss
+++ b/src/_sass/imports/minimal-mistakes.scss
@@ -4,6 +4,9 @@
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
 
+@import 'code-theme';
+
+
 /* Variables */
 @import "minimal-mistakes/variables";
 
