--- a/src/_sass/imports/minimal-mistakes/_reset.scss
+++ b/src/_sass/imports/minimal-mistakes/_reset.scss
@@ -9,7 +9,8 @@
 html {
     /* apply a natural box layout model to all elements */
     box-sizing: border-box;
-    background-color: $background-color;
+
+    background-color: var(--page-background);
     font-size: 16px;
 
     @include breakpoint($medium) {
@@ -128,12 +129,6 @@ img {
     -ms-interpolation-mode: bicubic;
 }
 
-/* Prevent max-width from affecting Google Maps */
-
-#map_canvas img,
-.google-maps img {
-    max-width: none;
-}
 
 /* Consistent form font size in all browsers, margin changes, misc */
 
