--- a/src/_sass/imports/minimal-mistakes/_syntax.scss
+++ b/src/_sass/imports/minimal-mistakes/_syntax.scss
@@ -8,7 +8,7 @@ figure.highlight {
   margin-bottom: 1em;
   background: $base00;
   color: $base05;
-  font-family: $monospace;
+  font-family: var(--monospace-font);
   font-size: $type-size-5;
   line-height: 1.8;
   border-radius: $border-radius;
