--- a/src/_sass/sdk-documentation-layout.scss
+++ b/src/_sass/sdk-documentation-layout.scss
@@ -3,17 +3,11 @@
 
 @import 'imports/astra';
 
+@import 'imports/common';
+
 @import 'imports/utilities';
 
-// $h4-font-size:  1rem !default;
-// $primary: #0066ce !default;
-// $secondary: #999 !default;
-// $theme: 'light' !default;
-$monospace: 'IBM Plex Mono', 'Fira Code', monospace !default;
-$sans-serif: 'IBM Plex Sans', 'Source Sans Pro', sans-serif !default;
-$body-font:  $sans-serif;
-$display-font:  $sans-serif;
-
+// @import 'imports/astra';
 @import 'imports/astra';
 @import 'imports/minimal-mistakes'; // main partials
 @import 'imports/minimal-mistakes-overrides';
@@ -23,89 +17,13 @@ $h3-font-size: 1.25rem;
 $h4-font-size: 1.17rem;
 $code-font-size: 1rem;
 
-// $semantic-blue: #0066ce;
-// $semantic-red: #e34850;
-// $semantic-orange: #e68619;
-
-// $celery-400: rgb(68, 181, 86);
-// $celery-500: rgb(75, 195, 95);
-// $celery-600: rgb(81, 210, 103);
-// $celery-700: rgb(88, 224, 111);
-// $chartreuse-400: rgb(133, 208, 68);
-// $chartreuse-500: rgb(142, 222, 73);
-// $chartreuse-600: rgb(155, 236, 84);
-// $chartreuse-700: rgb(163, 248, 88);
-// $yellow-400: rgb(223, 191, 0);
-// $yellow-500: rgb(237, 204, 0);
-// $yellow-600: rgb(250, 217, 0);
-// $yellow-700: rgb(255, 226, 46);
-// $magenta-400: rgb(216, 55, 144);
-// $magenta-500: rgb(226, 73, 157);
-// $magenta-600: rgb(236, 90, 170);
-// $magenta-700: rgb(245, 107, 183);
-// $fuchsia-400: rgb(192, 56, 204);
-// $fuchsia-500: rgb(207, 62, 220);
-// $fuchsia-600: rgb(217, 81, 229);
-// $fuchsia-700: rgb(227, 102, 239);
-// $purple-400: rgb(146, 86, 217);
-// $purple-500: rgb(157, 100, 225);
-// $purple-600: rgb(168, 115, 233);
-// $purple-700: rgb(180, 131, 240);
-// $indigo-400: rgb(103, 103, 236);
-// $indigo-500: rgb(117, 117, 241);
-// $indigo-600: rgb(130, 130, 246);
-// $indigo-700: rgb(144, 144, 250);
-// $seafoam-400: rgb(27, 149, 154);
-// $seafoam-500: rgb(32, 163, 168);
-// $seafoam-600: rgb(35, 178, 184);
-// $seafoam-700: rgb(38, 192, 199);
-// $red-400: rgb(227, 72, 80);
-// $red-500: rgb(236, 91, 98);
-// $red-600: rgb(247, 109, 116);
-// $red-700: rgb(255, 123, 130);
-// $orange-400: rgb(230, 134, 25);
-// $orange-500: rgb(242, 148, 35);
-// $orange-600: rgb(249, 164, 63);
-// $orange-700: rgb(255, 181, 91);
-// $green-400: rgb(45, 157, 120);
-// $green-500: rgb(51, 171, 132);
-// $green-600: rgb(57, 185, 144);
-// $green-700: rgb(63, 200, 156);
-// $blue-400: rgb(38, 128, 235);
-// $blue-500: rgb(55, 142, 240);
-// $blue-600: rgb(75, 156, 245);
-// $blue-700: rgb(90, 169, 250);
-// $gray-50: rgb(37, 37, 37);
-// $gray-75: rgb(47, 47, 47);
-// $gray-100: rgb(50, 50, 50);
-// $gray-200: rgb(62, 62, 62);
-// $gray-300: rgb(74, 74, 74);
-// $gray-400: rgb(90, 90, 90);
-// $gray-500: rgb(110, 110, 110);
-// $gray-600: rgb(144, 144, 144);
-// $gray-700: rgb(185, 185, 185);
-// $gray-800: rgb(227, 227, 227);
-// $gray-900: rgb(255, 255, 255);
-
-// @if ($theme == 'dark') {
-//     $background-color: #252a34 !default !global;
-//     $text-color: #eaeaea !default !global;
-//     $border-color: mix(#000, $background-color, 20%) !default !global;
-//     $card-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !default !global;
-// } @else {
-//     $background-color: #fff !default !global;
-//     $text-color: #223 !default !global;
-//     $border-color: mix(#fff, $text-color, 85%) !default !global;
-//     $card-background-color: #fafafa !default !global;
-//     $card-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !default !global;
-// }
 
 mark {
     background: var(--highlight-color);
 }
 
 section.page__content {
-    font-family: $body-font;
+    font-family: vat(--body-font);
     line-height: 1.5;
     color: var(--text-color);
 }
@@ -115,7 +33,7 @@ section.page__content h2,
 section.page__content h3,
 section.page__content h4,
 section.page__content h5 {
-    font-family: $display-font;
+    font-family: var(--display-font);
 }
 
 .stack {
@@ -135,15 +53,14 @@ section.page__content h5 {
     margin-bottom: 4em;
     border-radius: 8px;
     line-height: normal;
-    background: #fff;
-    border: solid 1px #dfe1e5;
+    background: var(--ui-background);
+    border: var(--ui-border);
 }
 
 .search-box-container:focus-within,
 .search-box-container:hover {
-    border: solid 1px #fafafa;
-    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
-        0 2px 6px 2px rgba(60, 64, 67, 0.149);
+    border: var(--ui-border-focus);
+    box-shadow: var(--ui-focus-shadow);
 }
 
 .search-box-container .icon {
@@ -172,16 +89,28 @@ section.page__content h5 {
     box-shadow: none;
     border: none;
     outline: none;
+    background: transparent;
 }
 #search-box::placeholder {
     color: var(--placeholder-color);
 }
 
 #search-result-none {
-    margin-top: 0;
-    margin-bottom: 4em;
-    margin-left: 48px;
+  margin-top: 0;
+  margin: 0;
+  padding: 1em;
+  font-size: 2em;
+  font-weight: 700;
+  font-family: var(--ui);
+  border: 1px solid var(--callout-border-color);
+  border-radius: 16px;
+  background: var(--callout-background);
+
+  .icon {
+    font-size: 2em;
+  }
 }
+
 
 #clear-button {
     cursor: pointer;
@@ -191,10 +120,11 @@ section.page__content h5 {
     min-width: 42px;
     height: 42px;
     padding: 11px;
+    background: transparent;
 }
 
 #clear-button:hover {
-    background: #eee;
+    background: var(--ui-background-hover);
 }
 
 .hidden {
@@ -203,7 +133,7 @@ section.page__content h5 {
 
 // For the "main" symbol in the heading
 h2 strong {
-    color: var(--primary-color);
+    color: var(--strong-color);
     font-weight: 700;
 }
 
@@ -214,11 +144,11 @@ h3 {
     width: calc(100%);
     font-feature-settings: normal;
     line-height: 1.5;
-    border: 10px solid $background-color;
-    border-bottom: 1px solid #e7e7e7;
+    border: 10px solid var(--content-background);
+    border-bottom: 1px solid var(--border-color);
     color: var(--text-color);
     z-index: 6; // For sticky header to float above
-    background: $background-color;
+    background: var(--content-background);
     transform: translateX(-10px);
     box-sizing: content-box;
 
@@ -235,7 +165,7 @@ h2 span.subhead,
 h3 span.subhead {
     display: block;
     font-size: $subheading-font-size;
-    line-height: 0.8;
+    line-height: 1;
     font-weight: 400;
     font-style: normal;
 }
@@ -246,7 +176,7 @@ h3 span.subhead {
 
 code,
 .code {
-    font-family: $monospace;
+    font-family: var(--monospace-font);
     display: inline;
     overflow-wrap: break-word;
 }
@@ -258,8 +188,8 @@ figcaption > code,
 td > code,
 dd > code {
     // font-size: $code-font-size;
-    border: 1px solid #ddd;
-    background: #fefefe;
+    border: var(--code-border);
+    background: var(--code-background);
     border-radius: 4px;
     padding-left: 4px;
     padding-right: 4px;
@@ -273,7 +203,7 @@ dd > code {
 // Can also be used standalone, e.g. in markup
 var,
 .var {
-    font-family: $monospace;
+    font-family: var(--monospace-font);
     // font-size: $code-font-size;
     font-style: italic;
     font-weight: 400;
@@ -290,7 +220,7 @@ strong var {
     margin-bottom: 40px;
     padding: 20px 17px;
     border-radius: 4px;
-    border: 1px solid $border-color;
+    border: 1px solid var(--border-color);
     // background-color: $card-background-color;
     color: var(--text-color);
     max-width: 820px;
@@ -316,7 +246,7 @@ section.page__content .card h3 {
     padding: 20px;
     padding-bottom: 10px;
 
-    font-family: $monospace;
+    font-family: var(--monospace-font);
     font-size: 1.2rem;
     font-feature-settings: normal;
     line-height: 1.5;
@@ -325,17 +255,17 @@ section.page__content .card h3 {
     white-space: nowrap;
 
     color: var(--text-color);
-    background-color: $card-background-color;
+    background: var(--card-background);
     // letter-spacing: .25px;
     border: none;
-    border-bottom: 1px solid #e7e7e7;
+    border-bottom: 1px solid var(--border-color);
     box-sizing: border-box;
     border-radius: 4px 4px 0 0;
 }
 
 /* Card header name */
 .card h3 strong {
-    color: var(--primary-color);
+    color: var(--strong-color);
 }
 
 .card h3 > span {
@@ -365,7 +295,7 @@ ul {
     margin-left: 1rem;
 }
 .page__content dd {
-    font-family: $body-font;
+    font-family: var(--body-font);
     font-size: 1rem;
 }
 
@@ -398,7 +328,7 @@ body.layout--sdk-documentation-layout article.page a,
 body.layout--sdk-documentation-layout article.page a:active,
 body.layout--sdk-documentation-layout article.page a:visited,
 body.layout--sdk-documentation-layout article.page a:hover {
-    color: var(--primary-color);
+    color: var(--link-color);
     text-decoration: none;
 }
 
@@ -406,7 +336,7 @@ body.layout--sdk-documentation-layout article.page a:hover {
 .page__content dt {
   display: list-item;
   list-style: square;
-  font-family: $monospace;
+  font-family: var(--monospace-font);
   // font-size: $code-font-size;
   font-size: 1rem;
   font-weight: 400;
@@ -442,11 +372,11 @@ body.layout--sdk-documentation-layout article.page a:hover {
 }
 
 .page__content dt strong {
-    color: var(--text-color);
+    color: var(--strong-color);
 }
 
 .page__content dt em {
-    color: $secondary;
+    color: var(--strong-color);
 }
 
 .page__content dd {
@@ -506,7 +436,7 @@ ul.index {
 
 .index li {
     display: flex;
-    font-family: $monospace;
+    font-family: var(--monospace-font);
     font-size: $code-font-size !important;
     margin: 0;
     box-sizing: content-box;
@@ -520,11 +450,11 @@ ul.index {
 
 .index li a:hover,
 .index li a:active {
-    color: var(--primary-color);
+    color: var(--link-color-hover);
 }
 /* Categories */
 .index h3 {
-    font-family: $display-font;
+    font-family: var(--display-font);
     font-size: $h3-font-size;
     background: transparent;
     border: none;
@@ -616,7 +546,7 @@ svg.highlighting-mark {
     left: -18px;
     border-radius: 8px;
     height: calc(100% + 16px);
-    background: hsla(49, 100%, 63%, 0.56); // hsla(58, 100%, 50%, 0.56);
+    background: var(--highlight-color);
     z-index: -1;
     width: 8px;
 }
@@ -630,7 +560,7 @@ svg.highlighting-mark {
     font-weight: 400;
     font-variant: normal;
     font-style: normal;
-    color: $semantic-blue;
+    color: var(--semantic-blue);
 
     height: 22px;
 
@@ -646,7 +576,7 @@ svg.highlighting-mark {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
 
-    border: 1px solid $semantic-blue;
+    border: 1px solid var(--semantic-blue);
     border-radius: 3px;
 
     background: transparent;
@@ -669,13 +599,13 @@ svg.highlighting-mark {
 }
 
 .red.modifier-tag {
-    color: $semantic-red;
-    border-color: $semantic-red;
+    color: var(--semantic-red);
+    border-color: var(--semantic-red);
 }
 
 .orange.modifier-tag {
-    color: $semantic-orange;
-    border-color: $semantic-orange;
+    color: var(--semantic-orange);
+    border-color: var(--semantic-orange);
 }
 // A block above a method or property name, at the very
 // top of a card section, that groups a series of flags
@@ -700,7 +630,7 @@ div.flags {
 }
 
 .page__content .notice--danger h4 {
-    color: $semantic-red;
+    color: var(--semantic-red);
 }
 
 .deprecated {
@@ -728,7 +658,7 @@ div.flags {
 
 // For "string", "number", "void", "typeof", etc...
 .keyword {
-    color: $purple-400;
+    color: $purple-500;
     // font-weight: inherit;
 }
 
@@ -799,4 +729,20 @@ figure.highlight {
 
 .card.list ul li {
     margin-top: 0;
+}
+
+
+@media (prefers-color-scheme: dark) {
+.string-literal {
+    color: $gray-700;
+}
+.punctuation {
+    color: $indigo-200;
+}
+.keyword {
+  color: $purple-200; // #a16cd2
+}
+.modifier {
+  color: $magenta-200;
+}
 }
